--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -8,6 +8,7 @@
         <h3>Listing Details</h3>
         <hr class="hr col-9 mb-4" />
       </div>
+      <br />
       <div class="card col-6 offset-3 show-card">
         <img
           src="<%=listing.image.url%>"
@@ -15,12 +16,13 @@
           alt="<%=listing.image.filename%>"
         />
         <div class="card-body">
+          <p class="card-text"><b><%=listing.title%></b><br /></p>
+          <div class="desc"><i><%=listing.description%></i><br /></div>
           <p class="card-text">
-            <b><%=listing.title%></b><br />
-            <%=listing.description%><br />
-            &#8377;<%=listing.price.toLocaleString("en-IN") %> <br />
             <%=listing.location%> <br />
-            <%=listing.country%>
+            <%=listing.country%><br /><br />
+            <b> &#8377;<%=listing.price.toLocaleString("en-IN") %></b
+            >&nbsp;/night<br />
           </p>
         </div>
       </div>
