--- a/public/css/style.css
+++ b/public/css/style.css
@@ -54,24 +54,47 @@ body {
   border: none;
   margin-bottom: 3rem;
 }
+.card-img {
+  /* height: 20rem; */
+  border-radius: 1rem;
+  overflow: hidden;
+}
 
 .card-img-top {
   border-radius: 1rem;
   width: 100%;
+  height: 100%;
   object-fit: cover;
+  scale: 1.15;
+  transition: 0.3s ease-in-out;
+}
+
+.card:hover > .card-img .card-img-top {
+  scale: 1;
+  transition: 0.3s ease-in-out;
 }
 
 .card-img-overlay {
-  opacity: 0;
-}
-
-.card-img-overlay:hover {
   opacity: 0.2;
   background-color: white;
+  height: 20rem;
+  transition: 0.3s ease-in-out;
+}
+
+.card:hover > .card-img-overlay,
+.card-img-overlay:hover {
+  opacity: 0;
+  transition: 0.3s ease-in-out;
 }
 
 .card-body {
   padding: 0;
+  transition: 0.3s ease-in-out;
+}
+
+.card:hover > .card-body {
+  text-shadow: 0 0 3px #aaa;
+  transition: 0.3s ease-in-out;
 }
 
 .card-text {
@@ -113,6 +136,7 @@ body {
 .show-img {
   height: 30vh;
   margin-bottom: 1rem;
+  scale: 1;
 }
 
 .show-card {
