--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -11,7 +11,7 @@
     >
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="collapse navbar-collapse mt-1" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <hr class="hr" />
         <a class="nav-link" href="/">Home</a>
