--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -33,7 +33,10 @@
             <div class="card-body m-1">
               <h5 class="card-title"><b><%=listing.title%></b></h5>
               <h6 class="card-subtitle mb-2 text-body-secondary">
-                <i><%=listing.location%>, <%=listing.country%></i>
+                <i
+                  ><%=listing.location%><%if(listing.country &&
+                  listing.location) {%>,<% }%> <%=listing.country%></i
+                >
               </h6>
               <p class="card-text">
                 &#8377;<%=listing.price.toLocaleString("en-IN") %> / night
