--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -30,14 +30,22 @@
   </head>
   <body>
     <!-- <h1>Wanderlust</h1> -->
+
+    <!-- Navbar -->
     <%- include("../includes/navbar.ejs") %>
+
+    <!-- Body -->
     <div class="container"><%-body%></div>
+
+    <!-- Footer -->
     <%- include("../includes/footer.ejs") %>
+
     <!-- Bootstrap CDN -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
+    <script src="/js/script.js"></script>
   </body>
 </html>
