--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -20,7 +20,7 @@
       <% for(listing of listings ) { %>
       <div class="listing p-4">
         <a href="/listings/<%=listing._id%>">
-          <div class="card col">
+          <div class="card col listing-card">
             <div class="card-img mb-2">
               <img
                 src="<%=listing.image.url%>"
