Moved routing codes to routes folder

--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -100,7 +100,7 @@
                 class="mb-3"
                 method="POST"
               >
-                <button class="btn btn-sm btn-dark">Delete</button>
+                <button class="btn btn-sm btn-danger">Delete</button>
               </form>
             </div>
           </div>
