--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -35,7 +35,9 @@
     <%- include("../includes/navbar.ejs") %>
 
     <!-- Body -->
-    <div class="container"><%-body%></div>
+    <div class="container">
+      <%- include("../includes/flash.ejs") %> <%-body%>
+    </div>
 
     <!-- Footer -->
     <%- include("../includes/footer.ejs") %>
