--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -4,6 +4,7 @@
   <title>Wanderlust</title>
   <body>
     <div class="heading">
+      <%=success%>
       <h3>All Listings</h3>
       <hr class="hr" />
       <!-- <form method="GET" action="/listings/new">
@@ -30,7 +31,7 @@
               />
             </div>
             <div class="card-img-overlay"></div>
-            <div class="card-body m-1">
+            <div class="card-body listing-body m-1">
               <h5 class="card-title"><b><%=listing.title%></b></h5>
               <h6 class="card-subtitle mb-2 text-body-secondary">
                 <i
