Completed Phase 2 - Part d

--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,54 +1,52 @@
 <!-- <%- // include("../includes/header.ejs") %> -->
 <% layout("/layouts/boilerplate.ejs") %>
-<html>
-  <title>Wanderlust</title>
-  <body>
-    <div class="heading">
-      <%=success%>
-      <h3>All Listings</h3>
-      <hr class="hr" />
-      <!-- <form method="GET" action="/listings/new">
-        <button>Add Listing</button>
-      </form> -->
-    </div>
 
-    <!-- <ul>
-      <% // for(listing of listings ) { %>
-      <li><a href="/listings/<%= // listing._id%>"><%=// listing.title%></a></li>
-      <% // } %>
-    </ul> -->
-    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
-      <% for(listing of listings ) { %>
-      <div class="listing p-4">
-        <a href="/listings/<%=listing._id%>">
-          <div class="card col listing-card">
-            <div class="card-img mb-2">
-              <img
-                src="<%=listing.image.url%>"
-                class="card-img-top"
-                alt="<%= listing.image.filename %>"
-                style="height: 20rem"
-              />
-            </div>
-            <div class="card-img-overlay"></div>
-            <div class="card-body listing-body m-1">
-              <h5 class="card-title"><b><%=listing.title%></b></h5>
-              <h6 class="card-subtitle mb-2 text-body-secondary">
-                <i
-                  ><%=listing.location%><%if(listing.country &&
-                  listing.location) {%>,<% }%> <%=listing.country%></i
-                >
-              </h6>
-              <p class="card-text">
-                &#8377;<%=listing.price.toLocaleString("en-IN") %> / night
-                <br />
-              </p>
-            </div>
-          </div>
-        </a>
+<title>Wanderlust</title>
+
+<div class="heading">
+  <h3>All Listings</h3>
+  <hr class="hr" />
+  <!-- <form method="GET" action="/listings/new">
+    <button>Add Listing</button>
+  </form> -->
+</div>
+
+<!-- <ul>
+  <% // for(listing of listings ) { %>
+  <li><a href="/listings/<%= // listing._id%>"><%= // listing.title%></a></li>
+  <% // } %>
+</ul> -->
+<div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
+  <% for(listing of listings ) { %>
+  <div class="listing p-4">
+    <a href="/listings/<%=listing._id%>">
+      <div class="card col listing-card">
+        <div class="card-img mb-2">
+          <img
+            src="<%=listing.image.url%>"
+            class="card-img-top"
+            alt="<%= listing.image.filename %>"
+            style="height: 20rem"
+          />
+        </div>
+        <div class="card-img-overlay"></div>
+        <div class="card-body listing-body m-1">
+          <h5 class="card-title"><b><%=listing.title%></b></h5>
+          <h6 class="card-subtitle mb-2 text-body-secondary">
+            <i
+              ><%=listing.location%><%if(listing.country && listing.location)
+              {%>,<% }%> <%=listing.country%></i
+            >
+          </h6>
+          <p class="card-text">
+            &#8377;<%=listing.price.toLocaleString("en-IN") %> / night
+            <br />
+          </p>
+        </div>
       </div>
-      <% } %>
-    </div>
-  </body>
-</html>
+    </a>
+  </div>
+  <% } %>
+</div>
+
 <!-- <%- // include("../includes/footer.ejs") %> -->
