--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,105 +1,97 @@
 <!-- <%- // include("../includes/header.ejs") %> -->
 <% layout("/layouts/boilerplate.ejs") %>
-<html>
-  <title>Wanderlust : New Listing</title>
-  <body>
-    <div class="row">
-      <div class="col-8 offset-2">
-        <h3>Add New Listing to Wanderlust</h3>
-        <hr class="hr" />
+<title>Wanderlust : New Listing</title>
+<div class="row">
+  <div class="col-8 offset-2">
+    <h3>Add New Listing to Wanderlust</h3>
+    <hr class="hr" />
 
-        <form
-          action="/listings"
-          method="POST"
-          class="needs-validation"
-          novalidate
-        >
-          <div class="mb-3">
-            <label class="form-label" for="title">Title</label>
-            <input
-              id="title"
-              class="form-control"
-              type="text"
-              name="listing[title]"
-              placeholder="Enter title"
-              autocomplete="off"
-              required
-            />
-            <div class="valid-feedback">Title looks good!</div>
-            <div class="invalid-feedback">Title cannot be empty!</div>
-          </div>
-          <div class="mb-3">
-            <label class="form-label" for="description">Description</label>
-            <textarea
-              id="description"
-              class="form-control"
-              type="text"
-              name="listing[description]"
-              placeholder="Enter description"
-              autocomplete="off"
-              required
-            ></textarea>
-            <div class="invalid-feedback">Please enter a short description</div>
-          </div>
-          <div class="mb-3">
-            <label class="form-label" for="link">Image Link</label>
-            <input
-              id="link"
-              class="form-control"
-              type="text"
-              name="listing[image][url]"
-              placeholder="Enter image URL/LINK"
-              autocomplete="off"
-            />
-          </div>
-          <div class="row">
-            <div class="mb-3 col-md-4">
-              <label class="form-label" for="price">Price</label>
-              <input
-                id="price"
-                class="form-control"
-                type="text"
-                name="listing[price]"
-                placeholder="Enter price"
-                autocomplete="off"
-                required
-              />
-              <div class="invalid-feedback">Price should be Valid!</div>
-            </div>
-            <div class="mb-3 col-md-8">
-              <label class="form-label" for="country">Country</label>
-              <input
-                id="country"
-                class="form-control"
-                type="text"
-                name="listing[country]"
-                placeholder="Enter country"
-                autocomplete="off"
-                required
-              />
-              <div class="invalid-feedback">Country name should be valid</div>
-            </div>
-          </div>
-          <div class="mb-3">
-            <label class="form-label" for="location">Location</label>
-            <input
-              id="location"
-              class="form-control"
-              type="text"
-              name="listing[location]"
-              placeholder="Enter location"
-              autocomplete="off"
-              required
-            />
-            <div class="invalid-feedback">Location should be valid</div>
-          </div>
-          <br />
-          <button class="btn btn-primary add-btn">Add</button>
-          <br />
-          <br />
-        </form>
+    <form action="/listings" method="POST" class="needs-validation" novalidate>
+      <div class="mb-3">
+        <label class="form-label" for="title">Title</label>
+        <input
+          id="title"
+          class="form-control"
+          type="text"
+          name="listing[title]"
+          placeholder="Enter title"
+          autocomplete="off"
+          required
+        />
+        <div class="valid-feedback">Title looks good!</div>
+        <div class="invalid-feedback">Title cannot be empty!</div>
       </div>
-    </div>
-  </body>
-</html>
+      <div class="mb-3">
+        <label class="form-label" for="description">Description</label>
+        <textarea
+          id="description"
+          class="form-control"
+          type="text"
+          name="listing[description]"
+          placeholder="Enter description"
+          autocomplete="off"
+          required
+        ></textarea>
+        <div class="invalid-feedback">Please enter a short description</div>
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="link">Image Link</label>
+        <input
+          id="link"
+          class="form-control"
+          type="text"
+          name="listing[image][url]"
+          placeholder="Enter image URL/LINK"
+          autocomplete="off"
+        />
+      </div>
+      <div class="row">
+        <div class="mb-3 col-md-4">
+          <label class="form-label" for="price">Price</label>
+          <input
+            id="price"
+            class="form-control"
+            type="text"
+            name="listing[price]"
+            placeholder="Enter price"
+            autocomplete="off"
+            required
+          />
+          <div class="invalid-feedback">Price should be Valid!</div>
+        </div>
+        <div class="mb-3 col-md-8">
+          <label class="form-label" for="country">Country</label>
+          <input
+            id="country"
+            class="form-control"
+            type="text"
+            name="listing[country]"
+            placeholder="Enter country"
+            autocomplete="off"
+            required
+          />
+          <div class="invalid-feedback">Country name should be valid</div>
+        </div>
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="location">Location</label>
+        <input
+          id="location"
+          class="form-control"
+          type="text"
+          name="listing[location]"
+          placeholder="Enter location"
+          autocomplete="off"
+          required
+        />
+        <div class="invalid-feedback">Location should be valid</div>
+      </div>
+      <br />
+      <button class="btn btn-primary add-btn">Add</button>
+      <br />
+      <br />
+    </form>
+  </div>
+</div>
+
 <!-- <%- // include("../includes/footer.ejs") %> -->
