--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,124 +1,121 @@
 <!-- <%- // include("../includes/header.ejs") %> -->
 <% layout("/layouts/boilerplate.ejs") %>
-<html>
-  <title>Wanderlust : New Listing</title>
-  <body>
-    <div class="row mb-5">
-      <div class="col-8 offset-2">
-        <h3>Edit your Listing</h3>
-        <hr class="hr" />
-      </div>
-      <br />
-      <div class="col-8 offset-2">
-        <form
-          action="/listings/<%=listing._id%>?_method=PUT"
-          method="POST"
-          class="needs-validation"
-          novalidate
-        >
-          <div class="mb-3">
-            <label class="form-label" for="title">Title</label>
-            <input
-              id="title"
-              class="form-control"
-              type="text"
-              name="listing[title]"
-              placeholder="Enter title"
-              value="<%=listing.title%>"
-              required
-            />
-            <div class="valid-feedback">Looks good!</div>
-            <div class="invalid-feedback">Title cannot be Empty</div>
-          </div>
 
-          <div class="mb-3">
-            <label class="form-label" for="description">Description</label>
-            <textarea
-              id="description"
-              class="form-control"
-              type="text"
-              name="listing[description]"
-              placeholder="Enter description"
-              required
-            >
+<title>Wanderlust : New Listing</title>
+
+<div class="row mb-5">
+  <div class="col-8 offset-2">
+    <h3>Edit your Listing</h3>
+    <hr class="hr" />
+  </div>
+  <br />
+  <div class="col-8 offset-2">
+    <form
+      action="/listings/<%=listing._id%>?_method=PUT"
+      method="POST"
+      class="needs-validation"
+      novalidate
+    >
+      <div class="mb-3">
+        <label class="form-label" for="title">Title</label>
+        <input
+          id="title"
+          class="form-control"
+          type="text"
+          name="listing[title]"
+          placeholder="Enter title"
+          value="<%=listing.title%>"
+          required
+        />
+        <div class="valid-feedback">Looks good!</div>
+        <div class="invalid-feedback">Title cannot be Empty</div>
+      </div>
+
+      <div class="mb-3">
+        <label class="form-label" for="description">Description</label>
+        <textarea
+          id="description"
+          class="form-control"
+          type="text"
+          name="listing[description]"
+          placeholder="Enter description"
+          required
+        >
 <%=listing.description%>
           </textarea
-            >
-            <div class="valid-feedback">Looks good!</div>
-            <div class="invalid-feedback">Description cannot be Empty</div>
-          </div>
-
-          <div class="mb-3">
-            <label class="form-label" for="link">Image Link</label>
-            <input
-              id="link"
-              class="form-control"
-              type="text"
-              name="listing[image][url]"
-              placeholder="Enter image URL/LINK"
-              value="<%=listing.image.url%>"
-              required
-            />
-            <div class="valid-feedback">Looks good!</div>
-            <div class="invalid-feedback">
-              Please enter a valid link for Image
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="mb-3 col-md-4">
-              <label class="form-label" for="price">Price</label>
-              <input
-                id="price"
-                class="form-control"
-                type="number"
-                name="listing[price]"
-                placeholder="Enter price"
-                value="<%=listing.price%>"
-                required
-              />
-              <div class="valid-feedback">Looks good!</div>
-              <div class="invalid-feedback">Invalid Price Value</div>
-            </div>
-
-            <div class="mb-3 col-md-8">
-              <label class="form-label" for="country">Country</label>
-              <input
-                id="country"
-                class="form-control"
-                type="text"
-                name="listing[country]"
-                placeholder="Enter country"
-                value="<%=listing.country%>"
-                required
-              />
-              <div class="valid-feedback">Looks good!</div>
-              <div class="invalid-feedback">Country name cannot be Empty</div>
-            </div>
-          </div>
-
-          <div class="mb-4">
-            <label class="form-label" for="location">Location</label>
-            <input
-              id="location"
-              class="form-control"
-              type="text"
-              name="listing[location]"
-              placeholder="Enter location"
-              value="<%=listing.location%>"
-              required
-            />
-            <div class="valid-feedback">Looks good!</div>
-            <div class="invalid-feedback">Location cannot be Empty</div>
-          </div>
-
-          <button class="btn btn-dark edit-btn">Edit</button>
-
-          <br />
-          <br />
-        </form>
+        >
+        <div class="valid-feedback">Looks good!</div>
+        <div class="invalid-feedback">Description cannot be Empty</div>
       </div>
-    </div>
-  </body>
-</html>
+
+      <div class="mb-3">
+        <label class="form-label" for="link">Image Link</label>
+        <input
+          id="link"
+          class="form-control"
+          type="text"
+          name="listing[image][url]"
+          placeholder="Enter image URL/LINK"
+          value="<%=listing.image.url%>"
+          required
+        />
+        <div class="valid-feedback">Looks good!</div>
+        <div class="invalid-feedback">Please enter a valid link for Image</div>
+      </div>
+
+      <div class="row">
+        <div class="mb-3 col-md-4">
+          <label class="form-label" for="price">Price</label>
+          <input
+            id="price"
+            class="form-control"
+            type="number"
+            name="listing[price]"
+            placeholder="Enter price"
+            value="<%=listing.price%>"
+            required
+          />
+          <div class="valid-feedback">Looks good!</div>
+          <div class="invalid-feedback">Invalid Price Value</div>
+        </div>
+
+        <div class="mb-3 col-md-8">
+          <label class="form-label" for="country">Country</label>
+          <input
+            id="country"
+            class="form-control"
+            type="text"
+            name="listing[country]"
+            placeholder="Enter country"
+            value="<%=listing.country%>"
+            required
+          />
+          <div class="valid-feedback">Looks good!</div>
+          <div class="invalid-feedback">Country name cannot be Empty</div>
+        </div>
+      </div>
+
+      <div class="mb-4">
+        <label class="form-label" for="location">Location</label>
+        <input
+          id="location"
+          class="form-control"
+          type="text"
+          name="listing[location]"
+          placeholder="Enter location"
+          value="<%=listing.location%>"
+          required
+        />
+        <div class="valid-feedback">Looks good!</div>
+        <div class="invalid-feedback">Location cannot be Empty</div>
+      </div>
+
+      <button class="btn btn-dark edit-btn">Edit</button>
+
+      <br />
+      <br />
+    </form>
+  </div>
+</div>
+
 <!-- <%- // include("../includes/footer.ejs") %> -->
