--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -19,6 +19,15 @@
         <a class="nav-link" href="/listings">All Listing</a>
         <a class="nav-link" href="/listings/new">Add new Listing</a>
       </div>
+      <div class="navbar-nav ms-auto">
+        <hr class="hr" />
+        <% if(!currUser) { %>
+        <a class="nav-link" href="/signup">Sign up</a>
+        <a class="nav-link" href="/login">Log in</a>
+        <% } else { %>
+        <a class="nav-link" href="/logout">Log out</a>
+        <% } %>
+      </div>
     </div>
   </div>
 </nav>
