--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -110,7 +110,7 @@
         <div class="invalid-feedback">Location cannot be Empty</div>
       </div>
 
-      <button class="btn btn-dark edit-btn">Edit</button>
+      <button class="btn btn-primary edit-btn">Edit</button>
 
       <br />
       <br />
